force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Util_Table_Setting__mdt/ucinn_ascendv2__Giving_Details_Util_Table_Setting__mdt.object-meta.xml
<CustomObject>
    <description>The custom settings on the Util Table</description>
    <label>Giving Details Util Table Setting</label>
    <pluralLabel>Giving Details Util Table Settings</pluralLabel>
</CustomObject>