force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Util_Table_Setting__mdt/fields/ucinn_ascendv2__Field_Path_From_HardSoft_Credit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_Path_From_HardSoft_Credit__c</fullName>
    <description>The lookup path from Hard and Soft credit</description>
    <label>Field Path From HardSoft Credit</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>