force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Util_Table_Setting__mdt/fields/ucinn_ascendv2__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_Type__c</fullName>
    <description>The field type of the value being shown on the table</description>
    <label>Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REFERENCE</fullName>
                <default>true</default>
                <label>REFERENCE</label>
            </value>
            <value>
                <fullName>REFERENCE-URL</fullName>
            </value>
            <value>
                <fullName>REFERENCE-READONLY</fullName>
            </value>
            <value>
                <fullName>READONLY</fullName>
            </value>
            <value>
                <fullName>CURRENCY-READONLY</fullName>
            </value>
            <value>
                <fullName>DATE-READONLY</fullName>
            </value>
            <value>
                <fullName>DATETIME-READONLY</fullName>
            </value>
            <value>
                <fullName>NUMBER-READONLY</fullName>
            </value>
            <value>
                <fullName>PHONE-READONLY</fullName>
            </value>
            <value>
                <fullName>RICHTEXT-READONLY</fullName>
            </value>
            <value>
                <fullName>TEXTAREA-READONLY</fullName>
            </value>
            <value>
                <fullName>BOOLEAN-READONLY</fullName>
            </value>
            <value>
                <fullName>PICKLIST-READONLY</fullName>
            </value>
            <value>
                <fullName>MULTIPICKLIST-READONLY</fullName>
            </value>
            <value>
                <fullName>Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>