force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Util_Table_Setting__mdt/fields/ucinn_ascendv2__Header_Label__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Header_Label__c</fullName>
    <description>The header of the column the field is displayed under</description>
    <inlineHelpText>The corresponding column header that the field is written under. It should also be the same as the value listed in the Util Table Column Order in Giving Details Display Setting</inlineHelpText>
    <label>Header Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>