force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Util_Table_Setting__mdt/fields/ucinn_ascendv2__Household_Page__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Household_Page__c</fullName>
    <description>Defining the record to be related to the Household Donor Page</description>
    <inlineHelpText>Add the lookup if the field appears on the Household page.</inlineHelpText>
    <label>Household Page</label>
    <referenceTo>ucinn_ascendv2__Giving_Details_Display_Setting__mdt</referenceTo>
    <relationshipLabel>Giving Details Util Table Settings (Household Page)</relationshipLabel>
    <relationshipName>Giving_Details_Util_Table_Settings1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>