force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Util_Table_Setting__mdt/fields/ucinn_ascendv2__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transaction_Type__c</fullName>
    <description>The transaction type of the Hard and Soft Credit on the row</description>
    <label>Transaction Type</label>
    <referenceTo>ucinn_ascendv2__Giving_Details_Transaction_Type_Setting__mdt</referenceTo>
    <relationshipLabel>Giving Details Util Table Settings</relationshipLabel>
    <relationshipName>Giving_Details_Util_Table_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>